--- a/美化配置.yaml
+++ b/美化配置.yaml
@@ -1,4 +1,4 @@
-file_path: 打包/dat/00000845.dat
+file_path: 打包/dat/00000173.dat
 swap_pairs:
    - [10100100, 101001107] # AKM突击步枪, AKM-魔法神域
    - [10100200, 101002024] # M16A4突击步枪, M16A4-垂柳戏鸭
@@ -111,7 +111,7 @@ swap_pairs:
    - [405075, 40609896] # 灼焰舞者鞋子, 摩登天骄头发
    - [404252, 413789] # 完美偶像下衣, 晶梦幻蝶角色
    - [405116, 411204] # 热血青春竞技靴, 晶梦幻蝶飞行器
-   - [330600100, 330604000] # Dacia轿车(蓝), 仰望U7先锋版(雷霆紫)
+   - [330600100, 330604000] # Dacia轿车(蓝), 仰望U7(雷霆紫)
    - [330600200, 330604300] # Dacia轿车(红), 星河领航(炫晶粉)
    - [330600300, 330600600] # Dacia轿车(白), 玛莎拉蒂Ghibli(金)
    - [330800100, 330800700] # 双人摩托(黑), 双人摩托-双刃魅影(金)
@@ -129,17 +129,17 @@ swap_pairs:
    - [335100100, 335100700] # 拉力赛车(黑), 羁绊之心
    - [335100300, 335100600] # 拉力赛车(黑), 糖心拉力赛车(炫动紫)
    - [332500100, 332500500] # PG-117快艇, 快艇-自由的鲸
-   - [335000100, 335001000] # 马, 晶梦灵驹
-   - [335000200, 335000600] # 马, 照夜玉狮子
-   - [335000300, 335000700] # 马, 星梦玉骢
+   - [335000100, 335001000] # 猀ă, 晶梦灵驹
+   - [335000200, 335000600] # 猀ă, 照夜玉狮子
+   - [335000300, 335000700] # 猀ă, 星梦玉骢
    - [331400100, 331400400] # 罗尼皮卡(白), 特斯拉Cybertruck(极昼黑)
    - [331400200, 331400500] # 罗尼皮卡(蓝), 特斯拉Cybertruck(荒芜蓝)
    - [331400300, 331400600] # 罗尼皮卡(绿), 特斯拉Cybertruck(镭光铂)
    - [404063, 413702] # 兵团特训长裤(绿), 幻影飞狐套装
    - [402145, 401974] # 半面狐仙面具, 幻影飞狐头罩
-   - [403889, 812058] # 战术大师套装, 新体型测试avatar-2号
+   - [403889, 812058] # 战术大师套装, <未找到:812058>
    - [10100400, 101004018] # M416突击步枪, M416-星际漫游
-   - [20300800, 100401803] # M416机械瞄具, M416-星际漫游(机瞄)
+   - [20300800, 100401803] # <未找到:20300800>, M416-星际漫游(机瞄)
    - [20300600, 100201803] # M16A4机械瞄具, M16A4-葫芦兄弟(机瞄)
    - [10100500, 101005044] # GROZA突击步枪, GROZA-超新星
    - [10100600, 101006053] # AUG突击步枪, AUG-星梦奇缘
@@ -187,13 +187,13 @@ swap_pairs:
    - [10400300, 104003021] # S12K霰弹枪, S12K-海渊国主
    - [10400400, 104004005] # DBS霰弹枪, DBS-圣光天使
    - [10410000, 104100007] # SPAS-12霰弹枪, SPAS-12-音爆索尼克
-   - [10500100, 105001044] # M249轻机枪, M249-猪猪侠
+   - [10500100, 105001044] # M249轻机枪, M249-猪猪侾
    - [10500200, 105002013] # DP-28轻机枪, DP-28-扶摇飞仙
    - [10501000, 105010059] # MG3轻机枪, MG3-酷泡奶龙
    - [10700700, 107007003] # 爆炸猎弓, 爆炸猎弓-雪梅暗香
    - [10800100, 108001001] # 大砍刀, 大砍刀-粉色回忆
    - [10800200, 108002007] # 撬棍, 撬棍-雪国精灵
-   - [10800300, 10810100] # 镰刀, 超级战士-专用砍刀
+   - [10800300, 10810100] # 镰刀, 砍刀
    - [10800400, 108004048] # 平底锅, 平底锅-林间仙鹿
    - [404253, 413801] # 人气偶像下衣, 彩虹独角兽角色
    - [407128, 66100004] # 娇憨猪猪眼镜, 治疗特效-少女
@@ -206,10 +206,10 @@ swap_pairs:
    - [404064, 66110004] # 兵团特训长裤(紫), 翻越特效-少女
    - [401460, 66080004] # 耀粉歌者发饰, 队内淘汰播报-少女
    - [60200200, 602002006] # 烟雾弹, 烟雾弹-鸢尾晶梦
-   - [60204200, 602002013] # 烟雾弹, 烟雾弹-丁香清露
+   - [60204200, 602002013] # <未找到:60204200>, 烟雾弹-丁香清露
    - [20401300, 925009] # 快速扩容弹匣(步枪,机枪), 烟雾弹-丁香清露高级特效
-   - [403660, 413700] # 金鼠迎春套装, BBAA3角色
-   - [403809, 413697] # 牛气满满套装, BBAA1角色
+   - [403660, 413700] # 金鼠迎春套装, 蜜桃派对角色
+   - [403809, 413697] # 牛气满满套装, 樱桃泡泡角色
    - [3801009, 3801015] # 鸡哥, 超萌熊本熊
    - [404195, 413591] # 深褐色竞技裤, 蝶吟花词角色
    - [404193, 413661] # 淡黄色竞技裤, 狂花道·娜可露露角色
