--- a/cloth.yaml
+++ b/cloth.yaml
@@ -1,21 +1,21 @@
 hex_markers:
-   start: "0e03"
-   end: "0003"
+   start: "7a03"
+   end: "6c03"
 swap_pairs:
    - [403210, 413629] # 黄色运动上衣, 冰域雷影角色
    - [403211, 413753] # 蓝色运动上衣, 信仰神谕角色
    - [403209, 413386] # 红色运动上衣, 幽秘魅影套装
    - [403228, 413521] # 黑色伏地魔上衣, 绝色倾城角色
    - [403353, 413709] # 湖蓝色名流上衣, 绿洲幻境套装
-   - [401029, 40609872] # 红色童趣帽子, 绿洲幻境头饰
+   - [401029, 40609872] # 红色童趣帽子, 绿洲幻境头发
    - [404040, 401812] # 特训学院下装, 幽秘魅影发饰
    - [403171, 413057] # 黎明保卫者皮衣, 暗夜玫瑰套装
    - [403388, 413296] # 耀眼新星短袖衫, 暗夜鎏金套装
    - [401030, 401739] # 黑色童趣帽子, 暗夜鎏金发饰
-   - [404071, 40609559] # 猛禽长裤, 暗夜鎏金发饰
-   - [404072, 40609382] # 青年教官长裤, 暗夜玫瑰发饰
+   - [404071, 40609559] # 猛禽长裤, 暗夜鎏金头发
+   - [404072, 40609382] # 青年教官长裤, 暗夜玫瑰头发
    - [40604007, 400986] # 头发07(银色), 角色专用空头颅
-   - [401092, 40609920] # 黑白游荡者无檐帽, 燕燕于飞头饰
+   - [401092, 40609920] # 黑白游荡者无檐帽, 燕燕于飞头发
    - [403193, 413766] # 青年教官上衣, 燕燕于飞套装
    - [403058, 413608] # 特训学院上衣, 绊爱角色
    - [403061, 413599] # 猎鹰上衣, 美雪角色
@@ -24,7 +24,7 @@ swap_pairs:
    - [413602, 413293] # 街头风暴套装, 歌者泠鸢
    - [403272, 413745] # 灼焰舞者大衣, 脆鲨七海角色
    - [403198, 403795] # 竞技名士外套, 本愿之火套装
-   - [401086, 40609172] # 黑色先锋棒球帽, 本愿之火发饰
+   - [401086, 40609172] # 黑色先锋棒球帽, 本愿之火头发
    - [413708, 413410] # SS30特训套装, 白兰星角色
    - [413707, 413411] # 青团波波套装, 蔷薇星角色
    - [413688, 413412] # 星途旅人套装, 茉莉星角色
@@ -34,51 +34,51 @@ swap_pairs:
    - [413352, 413540] # SS23特训套装, 电磁星角色
    - [413255, 403745] # SS21特训套装, PEL摇滚竞梦者套装
    - [413217, 403960] # 娇憨猪猪套装, 灵绣套装
-   - [401039, 40609325] # 黑紫复古棒球帽, 灵绣发饰
+   - [401039, 40609325] # 黑紫复古棒球帽, 灵绣头发
    - [413216, 413755] # 萌趣咩咩套装, 黑曜寓言套装
-   - [401095, 40609880] # 蓝色守护者帽子, 黑曜寓言头饰
+   - [401095, 40609880] # 蓝色守护者帽子, 黑曜寓言头发
    - [413205, 413754] # SS20特训套装, 裁决天象套装
-   - [401084, 40609879] # 黄黑色先锋棒球帽, 裁决天象头饰
+   - [401084, 40609879] # 黄黑色先锋棒球帽, 裁决天象头发
    - [403371, 403819] # 短款蓝白羽绒服, 甜梦冰蝶套装
-   - [401083, 40609195] # 红白色先锋棒球帽, 甜梦冰蝶头饰
+   - [401083, 40609195] # 红白色先锋棒球帽, 甜梦冰蝶头发
    - [403370, 413079] # 短款白绿羽绒服, 青丘仙客套装
-   - [401090, 40609403] # 灰色游荡者无檐帽, 青丘仙客发饰
+   - [401090, 40609403] # 灰色游荡者无檐帽, 青丘仙客头发
    - [403351, 413085] # 紫底炫彩上衣, 碧影闪光套装
-   - [401121, 40609390] # 完美偶像帽子, 碧影闪光发饰
+   - [401121, 40609390] # 完美偶像帽子, 碧影闪光头发
    - [403180, 413195] # 兵团特训上衣(紫), 圣光天使套装
-   - [401122, 40609472] # 人气偶像帽子, 圣光天使头饰
+   - [401122, 40609472] # 人气偶像帽子, 圣光天使头发
    - [403580, 403857] # 麻辣教官上衣, 幻情紫藤套装
-   - [401089, 40609201] # 黄色名流帽子, 幻情紫藤发饰
+   - [401089, 40609201] # 黄色名流帽子, 幻情紫藤头发
    - [2200101, 2241108] # 你好, 辉光神谕
    - [403197, 413466] # 橘黑制服上衣, 圣堂之誓角色
    - [403200, 413595] # 酒红色名流上衣, 情公主角色
    - [403220, 403718] # 竞技达人朋克上衣, 天启纪元套装
-   - [401045, 40609106] # 酒红色名流帽子, 天启纪元发饰
-   - [401088, 40609101] # 湖蓝色名流帽子, 激萌罗小黑发饰
+   - [401045, 40609106] # 酒红色名流帽子, 天启纪元头发
+   - [401088, 40609101] # 湖蓝色名流帽子, 激萌罗小黑头发
    - [403192, 413453] # 猛禽上衣, 镜光幻境套装
-   - [401028, 40609720] # 深蓝色名流帽子, 镜光幻境发饰
+   - [401028, 40609720] # 深蓝色名流帽子, 镜光幻境头发
    - [403199, 413360] # 深蓝色名流上衣, 闪耀新星套装
-   - [401023, 40609632] # 猛禽帽子, 闪耀新星发饰
+   - [401023, 40609632] # 猛禽帽子, 闪耀新星头发
    - [404076, 401786] # 橘黑制服长裤, 闪耀新星发饰
    - [403226, 413609] # 黄色伏地魔上衣, 兔兔小魔女角色
    - [403227, 413236] # 白色伏地魔上衣, 彩虹甜喵套装
-   - [401060, 40609502] # 灼焰舞者耳罩, 彩虹甜喵发饰
+   - [401060, 40609502] # 灼焰舞者耳罩, 彩虹甜喵头发
    - [413768, 413176] # SS31特训套装, 百合蜜语套装
    - [413706, 403754] # 糖糖葫芦套装, 潮汐统领套装
    - [403229, 403936] # 魅力单车上衣, 苍蓝魅影套装
    - [403354, 403905] # 黄色名流上衣, 暗翼战神套装
    - [403316, 403906] # 甜蜜告白上衣, 暗影爵士套装
-   - [421004, 40609462] # 糖糖葫芦头饰, 百合蜜语发饰
-   - [401404, 40609132] # 牛气满满帽子, 潮汐统领发饰
-   - [404078, 40609326] # 深蓝色名流长裤, 苍蓝魅影发饰
-   - [404080, 40609234] # 酒红色名流长裤, 暗影爵士发饰
+   - [421004, 40609462] # 糖糖葫芦头饰, 百合蜜语头发
+   - [401404, 40609132] # 牛气满满帽子, 潮汐统领头发
+   - [404078, 40609326] # 深蓝色名流长裤, 苍蓝魅影头发
+   - [404080, 40609234] # 酒红色名流长裤, 暗影爵士头发
    - [405095, 405306] # 蓝色运动鞋, 百合蜜语鞋
    - [404084, 413644] # 黑色运动短裤, 航行童话套装
    - [404098, 413787] # 黄色伏地魔长裤, 炽纹蛇影套装
-   - [405043, 40609801] # 深蓝色名流皮鞋, 航行童话头饰
-   - [405050, 40609911] # 竞技达人朋克靴, 炽纹蛇影头饰
+   - [405043, 40609801] # 深蓝色名流皮鞋, 航行童话头发
+   - [405050, 40609911] # 竞技达人朋克靴, 炽纹蛇影头发
    - [404092, 413803] # 竞技达人朋克下装, 动力核心套装
-   - [407161, 40609894] # 星途旅人眼镜, 动力核心头饰
+   - [407161, 40609894] # 星途旅人眼镜, 动力核心头发
    - [402056, 402209] # 灼焰舞者口罩, 动力核心面罩
    - [404101, 413771] # 魅力单车下装, 盛世惊鸿-云鸾
    - [404100, 413772] # 黑色伏地魔长裤, 盛世惊鸿-云鸾
@@ -88,33 +88,42 @@ swap_pairs:
    - [404154, 413782] # 甜蜜告白长裤, 风玲角色
    - [404043, 413783] # 猎鹰裤子, 海琴烟角色
    - [404169, 413778] # 湖蓝色名流长裤, 幻梦之森套装
-   - [401840, 40609927] # 香桃花海发饰, 幻梦之森头饰
+   - [401840, 40609927] # 香桃花海发饰, 幻梦之森头发
    - [407127, 407177] # 萌趣咩咩眼镜, 幻梦之森眼罩
    - [404208, 413685] # 绮丽涂鸦长裤, 时空协奏·心弦
    - [404190, 413687] # 长空猛禽下装, 时空协奏·和音
    - [404170, 413684] # 黄色名流长裤, 时空协奏·回响
    - [404212, 413807] # 耀眼新星长裤, 摩登天骄套装
-   - [405075, 40609896] # 灼焰舞者鞋子, 摩登天骄头饰
+   - [405075, 40609896] # 灼焰舞者鞋子, 摩登天骄头发
    - [404252, 413789] # 完美偶像下衣, 晶梦幻蝶角色
    - [404063, 413702] # 兵团特训长裤(绿), 幻影飞狐套装
    - [402145, 401974] # 半面狐仙面具, 幻影飞狐头罩
-   - [403889, 812058] # 战术大师套装, 新体型测试avatar-2号
+   - [403889, 812058] # 战术大师套装, <未找到:812058>
    - [404253, 413801] # 人气偶像下衣, 彩虹独角兽角色
    - [403115, 413562] # 最强战友T恤(白), 镜域双华-欧若拉
    - [403179, 413563] # 兵团特训上衣(绿), 镜域双华-欧若拉
    - [453009, 413564] # 蛟龙战队T恤, 镜域双华-欧若拉
-   - [403660, 413700] # 金鼠迎春套装, BBAA3角色
-   - [403809, 413697] # 牛气满满套装, BBAA1角色
+   - [403660, 413700] # 金鼠迎春套装, 蜜桃派对角色
+   - [403809, 413697] # 牛气满满套装, 樱桃泡泡角色
    - [404193, 413661] # 淡黄色竞技裤, 狂花道·娜可露露角色
    - [404181, 413662] # 紫色工装裤, 狂花道·雅典娜角色
    - [404178, 413724] # 蓝色工装裤, 俏兔智灵角色
    - [404195, 413591] # 深褐色竞技裤, 蝶吟花词角色
-   - [403431, 413806]
-   - [403432, 413805]
-   - [405036, 411209]
-   - [405040, 413820]
-   - [405038, 413819]
-   - [405054, 413818]
-   - [401151, 40609827]
-   - [403478, 413693]
-   - [404280, 411212]
+   - [403431, 413806]# 完美偶像上衣, 冰晶湖光角色
+   - [403432, 413805]# 人气偶像上衣, 琉璃花蕾角色
+   - [405036, 411209]# 青年教官鞋子, 翎光蝶翼飞行器
+   - [405040, 413820]# 橘黑制服鞋子, 圣域龙灵-瑞拉
+   - [405038, 413819]# 灰色格斗者鞋子, 圣域龙灵-瑞拉
+   - [405054, 413818]# 黄色伏地魔鞋子, 圣域龙灵-瑞拉
+   - [401151, 40609827]# 极地朋克帽, 墨金战记头发
+   - [403478, 413693]# 极地朋克上装, 墨金战记套装
+   - [404280, 411212]# 极地朋克下装, 圣域金龙飞行器
+   - [404179, 413893]# 黄色工装裤, 霓虹热舞套装
+   - [407048, 407185]# 元素星魂眼镜, 霓虹热舞眼镜
+   - [401091, 40609977]# 黄绿游荡者无檐帽, 霓虹热舞头发
+   - [40605007, 40609535]# 头发07(灰色), 歌者泠鸢头发
+   - [404174, 413682]# 灰色格斗裤, 魔药课室角色
+   - [404176, 413872]# 棕色格斗裤, 乐音角色
+   - [404064, 413869]# 兵团特训长裤(紫), 冷漠罗丽角色
+   - [404038, 413870]# 海军蓝休闲裤, 时希公主角色
+   - [703586, 703661]# 千金淑猫降落伞, 最终圣卫者降落伞
