--- a/weapon.yaml
+++ b/weapon.yaml
@@ -4,7 +4,7 @@ swap_pairs:
    - [10200800, 102008009] # AKS-74U冲锋枪, AKS-74U-信仰神谕
    - [10100300, 101003072] # SCAR-L突击步枪, SCAR-L-纯梦嫁纱
    - [10100400, 101004018] # M416突击步枪, M416-星际漫游
-   - [20300800, 100401803] # M416机械瞄具, M416-星际漫游(机瞄)
+   - [20300800, 100401803] # <未找到:20300800>, M416-星际漫游(机瞄)
    - [20300600, 100201803] # M16A4机械瞄具, M16A4-葫芦兄弟(机瞄)
    - [10100500, 101005044] # GROZA突击步枪, GROZA-超新星
    - [10100600, 101006053] # AUG突击步枪, AUG-星梦奇缘
@@ -52,11 +52,21 @@ swap_pairs:
    - [10400300, 104003021] # S12K霰弹枪, S12K-海渊国主
    - [10400400, 104004005] # DBS霰弹枪, DBS-圣光天使
    - [10410000, 104100007] # SPAS-12霰弹枪, SPAS-12-音爆索尼克
-   - [10500100, 105001044] # M249轻机枪, M249-猪猪侠
+   - [10500100, 105001044] # M249轻机枪, M249-猪猪侾
    - [10500200, 105002013] # DP-28轻机枪, DP-28-扶摇飞仙
    - [10501000, 105010059] # MG3轻机枪, MG3-酷泡奶龙
    - [10700700, 107007003] # 爆炸猎弓, 爆炸猎弓-雪梅暗香
    - [10800100, 108001001] # 大砍刀, 大砍刀-粉色回忆
    - [10800200, 108002007] # 撬棍, 撬棍-雪国精灵
-   - [10800300, 10810100] # 镰刀, 超级战士-专用砍刀
+   - [10800300, 10810100] # 镰刀, 砍刀
    - [10800400, 108004048] # 平底锅, 平底锅-林间仙鹿
+   - [20100900, 905513]# 枪口补偿器(步枪), 熔岩统帅-击杀击中特效
+   - [20101100, 905523]# 消音器(步枪), 精灵之光-击杀击中特效
+   - [20100600, 905530]# 消音器(冲锋枪,手枪), 金蛇镇世2-击杀击中特效
+   - [20100400, 905522]# 消焰器(冲锋枪), 时空协奏-击杀击中特效
+   - [20100200, 905511]# 枪口补偿器(冲锋枪), 万古烈焰-击杀击中特效
+   - [20101000, 905515]# 消焰器(步枪), 星梦奇缘-击杀击中特效
+   - [29210500, 905514]# P90冲锋枪默认弹匣, 沙丘之主-击杀击中特效
+   - [29599900, 905533]# MG3轻机枪默认弹匣, 辉羽雀灵-击杀击中特效
+   - [29599900, 905533]# MG3轻机枪默认弹匣, 辉羽雀灵-击杀击中特效
+   - [29500700, 905533]# MG3轻机枪默认弹匣, 辉羽雀灵-击杀击中特效
