--- a/vehicle.yaml
+++ b/vehicle.yaml
@@ -17,9 +17,9 @@ swap_pairs:
    - [335100100, 335100700] # 拉力赛车(黑), 羁绊之心
    - [335100300, 335100600] # 拉力赛车(黑), 糖心拉力赛车(炫动紫)
    - [332500100, 332500500] # PG-117快艇, 快艇-自由的鲸
-   - [335000100, 335001000] # 猀ă, 晶梦灵驹
-   - [335000200, 335000600] # 猀ă, 照夜玉狮子
-   - [335000300, 335000700] # 猀ă, 星梦玉骢
+   - [335000100, 335001000] # 马, 晶梦灵驹
+   - [335000200, 335000600] # 马, 照夜玉狮子
+   - [335000300, 335000700] # 马, 星梦玉骢
    - [331400100, 331400400] # 罗尼皮卡(白), 特斯拉Cybertruck(极昼黑)
    - [331400200, 331400500] # 罗尼皮卡(蓝), 特斯拉Cybertruck(荒芜蓝)
    - [331400300, 331400600] # 罗尼皮卡(绿), 特斯拉Cybertruck(镭光铂)
