--- a/weapon.yaml
+++ b/weapon.yaml
@@ -52,7 +52,7 @@ swap_pairs:
    - [10400300, 104003021] # S12K霰弹枪, S12K-海渊国主
    - [10400400, 104004005] # DBS霰弹枪, DBS-圣光天使
    - [10410000, 104100007] # SPAS-12霰弹枪, SPAS-12-音爆索尼克
-   - [10500100, 105001044] # M249轻机枪, M249-猪猪侾
+   - [10500100, 105001044] # M249轻机枪, M249-猪猪侠
    - [10500200, 105002013] # DP-28轻机枪, DP-28-扶摇飞仙
    - [10501000, 105010059] # MG3轻机枪, MG3-酷泡奶龙
    - [10700700, 107007003] # 爆炸猎弓, 爆炸猎弓-雪梅暗香
