--- a/伪实体配置.yaml
+++ b/伪实体配置.yaml
@@ -119,9 +119,9 @@ search_targets:
    - [335100100, 335100700] # 拉力赛车(黑), 羁绊之心
    - [335100300, 335100600] # 拉力赛车(黑), 糖心拉力赛车(炫动紫)
    - [332500100, 332500500] # PG-117快艇, 快艇-自由的鲸
-   - [335000100, 335001000] # 猀ă, 晶梦灵驹
-   - [335000200, 335000600] # 猀ă, 照夜玉狮子
-   - [335000300, 335000700] # 猀ă, 星梦玉骢
+   - [335000100, 335001000] # 马, 晶梦灵驹
+   - [335000200, 335000600] # 马, 照夜玉狮子
+   - [335000300, 335000700] # 马, 星梦玉骢
    - [331400100, 331400400] # 罗尼皮卡(白), 特斯拉Cybertruck(极昼黑)
    - [331400200, 331400500] # 罗尼皮卡(蓝), 特斯拉Cybertruck(荒芜蓝)
    - [331400300, 331400600] # 罗尼皮卡(绿), 特斯拉Cybertruck(镭光铂)
@@ -177,7 +177,7 @@ search_targets:
    - [10400300, 104003021] # S12K霰弹枪, S12K-海渊国主
    - [10400400, 104004005] # DBS霰弹枪, DBS-圣光天使
    - [10410000, 104100007] # SPAS-12霰弹枪, SPAS-12-音爆索尼克
-   - [10500100, 105001044] # M249轻机枪, M249-猪猪侾
+   - [10500100, 105001044] # M249轻机枪, M249-猪猪侠
    - [10500200, 105002013] # DP-28轻机枪, DP-28-扶摇飞仙
    - [10501000, 105010059] # MG3轻机枪, MG3-酷泡奶龙
    - [10700700, 107007003] # 爆炸猎弓, 爆炸猎弓-雪梅暗香
