--- a/cloth.yaml
+++ b/cloth.yaml
@@ -1,6 +1,6 @@
 hex_markers:
-   start: "7a03"
-   end: "6c03"
+   start: "c703"
+   end: "b903"
 swap_pairs:
    - [403210, 413629] # 黄色运动上衣, 冰域雷影角色
    - [403211, 413753] # 蓝色运动上衣, 信仰神谕角色
@@ -127,3 +127,8 @@ swap_pairs:
    - [404064, 413869]# 兵团特训长裤(紫), 冷漠罗丽角色
    - [404038, 413870]# 海军蓝休闲裤, 时希公主角色
    - [703586, 703661]# 千金淑猫降落伞, 最终圣卫者降落伞
+   - [413307, 413871]# 绯格组合套装, 灵公主角色
+   - [405055, 413934]# 白色伏地魔鞋子, 绯月迷踪角色
+   - [405057, 413935]# 魅力单车鞋子, 玫纹锢梦角色
+   - [405062, 413936]# 酒红色名流皮鞋, 黯羽织刑角色
+   - [407026, 411159]# 极地朋克眼镜, 幻海精灵飞行器
