--- a/weapon.yaml
+++ b/weapon.yaml
@@ -70,3 +70,4 @@ swap_pairs:
    - [29599900, 905533]# MG3轻机枪默认弹匣, 辉羽雀灵-击杀击中特效
    - [29599900, 905533]# MG3轻机枪默认弹匣, 辉羽雀灵-击杀击中特效
    - [29500700, 905533]# MG3轻机枪默认弹匣, 辉羽雀灵-击杀击中特效
+   - [10501200, 105012021]# PKM轻机枪, PKM-时空协奏
