--- a/伪实体配置.yaml
+++ b/伪实体配置.yaml
@@ -1,6 +1,6 @@
 hex_markers:
-   start: "178d"
-   end: "0b8d"
+   start: "4f8d"
+   end: "438d"
 folder_path: "打包/uexp/"
 search_targets:
    - [10100100, 101001107] # AKM突击步枪, AKM-魔法神域
@@ -212,3 +212,7 @@ search_targets:
    - [404064, 413869]# 兵团特训长裤(紫), 冷漠罗丽角色
    - [404038, 413870]# 海军蓝休闲裤, 时希公主角色
    - [703586, 703661]# 千金淑猫降落伞, 最终圣卫者降落伞
+   - [413307, 413871]# 绯格组合套装, 灵公主角色
+   - [405055, 413934]# 白色伏地魔鞋子, 绯月迷踪角色
+   - [405057, 413935]# 魅力单车鞋子, 玫纹锢梦角色
+   - [405062, 413936]# 酒红色名流皮鞋, 黯羽织刑角色
