--- a/cloth.yaml
+++ b/cloth.yaml
@@ -132,3 +132,6 @@ swap_pairs:
    - [405057, 413935]# 魅力单车鞋子, 玫纹锢梦角色
    - [405062, 413936]# 酒红色名流皮鞋, 黯羽织刑角色
    - [407026, 411159]# 极地朋克眼镜, 幻海精灵飞行器
+   - [405056, 413882]# 黑色伏地魔鞋子, 星穹咏叹调套装
+   - [405074, 413883]# 冷焰舞者鞋子, 星影赞美诗套装
+   - [405090, 413884]# 甜蜜告白靴子, 星渊小夜曲套装
