--- a/伪实体配置.yaml
+++ b/伪实体配置.yaml
@@ -216,3 +216,6 @@ search_targets:
    - [405055, 413934]# 白色伏地魔鞋子, 绯月迷踪角色
    - [405057, 413935]# 魅力单车鞋子, 玫纹锢梦角色
    - [405062, 413936]# 酒红色名流皮鞋, 黯羽织刑角色
+   - [405056, 413882]# 黑色伏地魔鞋子, 星穹咏叹调套装
+   - [405074, 413883]# 冷焰舞者鞋子, 星影赞美诗套装
+   - [405090, 413884]# 甜蜜告白靴子, 星渊小夜曲套装
