--- a/伪实体配置.yaml
+++ b/伪实体配置.yaml
@@ -219,3 +219,15 @@ search_targets:
    - [405056, 413882]# 黑色伏地魔鞋子, 星穹咏叹调套装
    - [405074, 413883]# 冷焰舞者鞋子, 星影赞美诗套装
    - [405090, 413884]# 甜蜜告白靴子, 星渊小夜曲套装
+   - [407056, 407190]# 麻辣教官眼镜, 星渊小夜曲眼罩
+   - [401046, 421098]# 蓝色童趣帽子, 星渊小夜曲发饰
+   - [405206, 403492]# 极地朋克靴, 绯红秘境套装
+   - [405220, 413140]# 青涩时光靴子, 绚金瑰梦套装
+   - [405250, 413214]# 元素星魂鞋, 圣诞惊喜套装
+   - [405255, 413522]# 麻辣教官鞋子, 辉耀战甲套装
+   - [405281, 413523]# 金鼠迎春鞋, 月华战甲套装
+   - [405301, 413524]# 战术大师战靴, 雪晶战甲套装
+   - [405044, 413620]# 黑色运动鞋, 极冰使者角色
+   - [405059, 413890]# 红色运动鞋, 鲛海歌灵角色
+   - [405124, 413889]# 魔术贴红色网球鞋, 幽澜祭司角色
+   - [405117, 413888]# 魔术贴紫色网球鞋, 幻海仙踪角色
