--- a/cloth.yaml
+++ b/cloth.yaml
@@ -147,3 +147,6 @@ swap_pairs:
    - [405059, 413890]# 红色运动鞋, 鲛海歌灵角色
    - [405124, 413889]# 魔术贴红色网球鞋, 幽澜祭司角色
    - [405117, 413888]# 魔术贴紫色网球鞋, 幻海仙踪角色
+   - [405178, 423012]# 人气偶像靴子, 次元竞界套装
+   - [407009, 405428]# 耀眼新星墨镜, 蓝海鲸歌凉鞋
+   - [401059, 41600008]# 冷焰舞者耳罩, 蓝海鲸歌头发
