--- a/伪实体配置.yaml
+++ b/伪实体配置.yaml
@@ -65,7 +65,7 @@ search_targets:
    - [401023, 401786] # 猛禽帽子, 闪耀新星发饰
    - [404076, 401786] # 橘黑制服长裤, 闪耀新星发饰
    - [403226, 413609] # 黄色伏地魔上衣, 兔兔小魔女角色
-   - [10100300, 101003072] # SCAR-L突击步枪, SCAR-L-纯梦嫁纱
+   - [10100300, 101003072] # <未找到:10100300>, SCAR-L-纯梦嫁纱
    - [403227, 413236] # 白色伏地魔上衣, 彩虹甜喵套装
    - [401060, 401695] # 灼焰舞者耳罩, 彩虹甜喵发饰
    - [413768, 413176] # SS31特训套装, 百合蜜语套装
@@ -231,3 +231,6 @@ search_targets:
    - [405059, 413890]# 红色运动鞋, 鲛海歌灵角色
    - [405124, 413889]# 魔术贴红色网球鞋, 幽澜祭司角色
    - [405117, 413888]# 魔术贴紫色网球鞋, 幻海仙踪角色
+   - [405178, 423012]# 人气偶像靴子, 次元竞界套装
+   - [407009, 405428]# 耀眼新星墨镜, 蓝海鲸歌凉鞋
+   - [401059, 421123]# 冷焰舞者耳罩, 蓝海鲸歌头发
